# api/v2/swagger/swagger.json
@@ -834,6 +834,93 @@
                 }
             }
         },
+        "/translation/products/{productName}/versions/{version}/locales/{locale}/components/{component}/keys": {
+            "get": {
+                "description": "Get multiple translations together by their keys",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "translation-product-component-key-api"
+                ],
+                "summary": "Get translations of multiple strings",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "product name",
+                        "name": "productName",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "version",
+                        "name": "version",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "locale name",
+                        "name": "locale",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "component name",
+                        "name": "component",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "keys separated by commas",
+                        "name": "keys",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "a flag for returnning pseudo translation",
+                        "name": "pseudo",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "207": {
+                        "description": "Successful Partially",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/translation/products/{productName}/versions/{version}/locales/{locale}/components/{component}/keys/{key}": {
             "get": {
                 "description": "Get a message by its key",
@@ -1063,7 +1150,7 @@
                     "type": "string"
                 },
                 "pseudo": {
-                    "type": "string"
+                    "type": "object"
                 },
                 "region": {
                     "type": "string"
